<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        card_view:cardCornerRadius="2dp"
        card_view:cardUseCompatPadding="true"
        card_view:contentPaddingLeft="@dimen/card_horizontal_padding"
        card_view:contentPaddingRight="@dimen/card_horizontal_padding"
        card_view:contentPaddingTop="@dimen/card_vertical_padding"
        card_view:contentPaddingBottom="@dimen/card_vertical_padding"
        card_view:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/foodNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Pizza"
                android:textSize="@dimen/food_name_font"
                android:textColor="@color/card_title"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <ImageView
                    android:layout_width="@dimen/food_pict_width"
                    android:layout_height="@dimen/food_pict_height"
                    android:src="@drawable/food"
                    android:layout_centerVertical="true"/>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true">

                    <TextView
                        android:id="@+id/totalCalorieTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/food_calories"
                        android:textSize="@dimen/calories_font_size"
                        android:text="500"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/food_calories_unit"
                        android:textSize="@dimen/calories_unit_font_size"
                        android:text="@string/kcal_unit"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@id/totalCalorieTextView"
                        android:layout_alignParentTop="true"/>

                </RelativeLayout>

            </RelativeLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="0,1,2">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:background="@drawable/table_border_right"
                        android:paddingTop="@dimen/table_column_padding"
                        android:paddingBottom="@dimen/table_column_padding">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center_vertical">

                            <TextView
                                android:id="@+id/proteinIntakeTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/stats_value_font_size_1"
                                android:textColor="@color/protein_color"
                                android:text="120"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="14dp"
                                android:layout_gravity="center_vertical"
                                android:text="@string/protein_unit"
                                android:textColor="@color/protein_color"
                                android:layout_marginLeft="3dp" />

                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/protein"
                            android:textSize="@dimen/stats_label_font_size_1"
                            android:layout_marginTop="3dp"
                            android:gravity="center_horizontal"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:background="@drawable/table_border_right"
                        android:paddingTop="@dimen/table_column_padding"
                        android:paddingBottom="@dimen/table_column_padding">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center_vertical">

                            <TextView
                                android:id="@+id/fatIntakeTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/stats_value_font_size_1"
                                android:textColor="@color/fat_color"
                                android:text="120"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="14dp"
                                android:layout_gravity="center_vertical"
                                android:text="@string/fat_unit"
                                android:textColor="@color/fat_color"
                                android:layout_marginLeft="3dp" />

                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fat"
                            android:textSize="@dimen/stats_label_font_size_1"
                            android:layout_marginTop="3dp"
                            android:gravity="center_horizontal"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:paddingTop="@dimen/table_column_padding"
                        android:paddingBottom="@dimen/table_column_padding">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center_vertical">

                            <TextView
                                android:id="@+id/carbIntakeTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/stats_value_font_size_1"
                                android:textColor="@color/carb_color"
                                android:text="120"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="14dp"
                                android:layout_gravity="center_vertical"
                                android:text="@string/carbohydrate_unit"
                                android:textColor="@color/carb_color"
                                android:layout_marginLeft="3dp" />

                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/carbohydrate"
                            android:textSize="@dimen/stats_label_font_size_1"
                            android:layout_marginTop="3dp"
                            android:gravity="center_horizontal"/>

                    </LinearLayout>

                </TableRow>

            </TableLayout>

            <FrameLayout
                android:id="@+id/nutrientContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>


    </android.support.v7.widget.CardView>

</ScrollView>
