<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity.MainActivity"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:id="@+id/calorieInfoContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/stepsCountContainer"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_centerVertical="true">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_calorie"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="13sp"
                    android:gravity="center_horizontal"
                    android:text="Recommended Calorie Daily"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true">

                <com.rey.material.widget.TextView
                    android:id="@+id/totalCalorieTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="23sp"
                    android:textStyle="bold"
                    android:text="1023"
                    android:includeFontPadding="false"/>

                <com.rey.material.widget.TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:text="kCal"
                    android:includeFontPadding="false"/>

            </LinearLayout>

        </RelativeLayout>

        <com.gigamole.library.ArcProgressStackView
            android:id="@+id/calorieProgressBar"
            android:layout_width="@dimen/calorie_progress_bar_width"
            android:layout_height="@dimen/calorie_progress_bar_height"
            android:clickable="false"
            app:apsv_rounded="true"
            app:apsv_shadowed="true"
            app:apsv_animated="true"
            app:apsv_dragged="true"
            app:apsv_typeface="fonts/agency.ttf"
            app:apsv_text_color="#FFF"
            app:apsv_shadow_distance="5dp"
            app:apsv_shadow_angle="90"
            app:apsv_shadow_radius="10dp"
            app:apsv_shadow_color="#000"
            app:apsv_animation_duration="1000"
            app:apsv_interpolator="@android:anim/bounce_interpolator"
            app:apsv_draw_width="25%"
            app:apsv_model_offset="5dp"
            app:apsv_model_bg_enabled="true"
            app:apsv_start_angle="135"
            app:apsv_sweep_angle="270"
            app:apsv_indicator_orientation="vertical"
            app:apsv_preview_colors="@array/default_preview"
            app:apsv_preview_bg="#ccc"/>

        <com.rey.material.widget.TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:layout_gravity="right"
            android:text="Sunday, 20th Sunday"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:stretchColumns="0,1,2">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:background="@drawable/table_border_right_white"
                    android:paddingTop="@dimen/table_column_padding"
                    android:paddingBottom="@dimen/table_column_padding">

                    <com.rey.material.widget.TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/protein"
                        android:textSize="@dimen/stats_label_font_size"
                        android:textColor="@android:color/white"
                        android:gravity="center_horizontal"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <com.rey.material.widget.TextView
                            android:id="@+id/proteinIntakeTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:textSize="@dimen/stats_value_font_size"
                            android:textColor="@android:color/white"
                            android:text="120"/>

                        <com.rey.material.widget.TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14dp"
                            android:layout_gravity="center_vertical"
                            android:text="@string/carbohydrate_unit"
                            android:textColor="@android:color/white"
                            android:layout_marginLeft="3dp" />

                </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:background="@drawable/table_border_right_white"
                    android:paddingTop="@dimen/table_column_small_padding"
                    android:paddingBottom="@dimen/table_column_small_padding">

                    <com.rey.material.widget.TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fat"
                        android:textSize="@dimen/stats_label_font_size"
                        android:textColor="@android:color/white"
                        android:gravity="center_horizontal"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <com.rey.material.widget.TextView
                        android:id="@+id/fatIntakeTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textSize="@dimen/stats_value_font_size"
                        android:textColor="@android:color/white"
                        android:text="120"/>

                    <com.rey.material.widget.TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14dp"
                        android:layout_gravity="center_vertical"
                        android:text="@string/fat_unit"
                        android:textColor="@android:color/white"
                        android:layout_marginLeft="3dp" />

                </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:paddingTop="@dimen/table_column_small_padding"
                    android:paddingBottom="@dimen/table_column_padding">

                    <com.rey.material.widget.TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/carbohydrate"
                        android:textSize="@dimen/stats_label_font_size"
                        android:textColor="@android:color/white"
                        android:gravity="center_horizontal"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <com.rey.material.widget.TextView
                            android:id="@+id/carbIntakeTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:textSize="@dimen/stats_value_font_size"
                            android:textColor="@android:color/white"
                            android:text="120"/>

                        <com.rey.material.widget.TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14dp"
                            android:gravity="center_vertical"
                            android:text="@string/carbohydrate_unit"
                            android:textColor="@android:color/white"
                            android:layout_marginLeft="3dp" />

                    </LinearLayout>

                </LinearLayout>

            </TableRow>

        </TableLayout>

    </LinearLayout>

    <com.rey.material.widget.Button
        android:id="@+id/checkMoreButton"
        style="Material.Drawable.Ripple.Wave.Light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:paddingTop="@dimen/check_more_padding_top_bot"
        android:paddingBottom="@dimen/check_more_padding_top_bot"
        android:paddingLeft="@dimen/check_more_padding_left_right"
        android:paddingRight="@dimen/check_more_padding_left_right"
        android:background="@color/successButton"
        android:text="@string/check_more_text"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        app:rd_enable="true"/>

</RelativeLayout>
